# bvh_analysis_viewer

./: .gitignore  CMakeLists.txt
assest/: out.bvh
src/: BVH.cpp  BVHPlayer.cpp  test.cpp
third/freeglut/lib/: libglut.so.3.12.0
